src/components/Editor/Editor.css
/* vim:set ts=2 sw=2 sts=2 et: */

/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

/**
 * There's a known codemirror flex issue with chrome that this addresses.
 * BUG https://github.com/devtools-html/debugger.html/issues/63
 */
.editor-wrapper {
  position: absolute;
  height: calc(100% - 31px);
  width: 100%;
  top: 30px;
  left: 0px;
  --editor-footer-height: 27px;
}

html[dir="rtl"] .editor-mount {
  direction: ltr;
}

.editor-wrapper .breakpoints {
  position: absolute;
  top: 0;
  left: 0;
}

.function-search {
  max-height: 300px;
  overflow: hidden;
}

.function-search .results {
  height: auto;
}

.editor.hit-marker {
  height: 14px;
}

.coverage-on .CodeMirror-code :not(.hit-marker) .CodeMirror-line,
.coverage-on .CodeMirror-code :not(.hit-marker) .CodeMirror-gutter-wrapper {
  opacity: 0.5;
}

.editor.new-breakpoint svg {
  fill: var(--theme-selection-background);
  width: 60px;
  height: 14px;
  position: absolute;
  top: 0px;
  right: -4px;
}

.editor.new-breakpoint.folding-enabled svg {
  right: -16px;
}

.new-breakpoint.has-condition svg {
  fill: var(--theme-graphs-yellow);
}

.editor.new-breakpoint.breakpoint-disabled svg {
  opacity: 0.3;
}

.CodeMirror {
  width: 100%;
  height: 100%;
}

.editor-wrapper .editor-mount {
  width: 100%;
  height: calc(100% - var(--editor-footer-height));
  background-color: var(--theme-body-background);
}

.search-bar ~ .editor-mount {
  height: calc(100% - 72px);
}

.CodeMirror-linenumber {
  font-size: 11px;
  line-height: 14px;
}

.folding-enabled .CodeMirror-linenumber {
  text-align: left;
  padding: 0 0 0 2px;
}

/* set the linenumber white when there is a breakpoint */
.new-breakpoint .CodeMirror-gutter-wrapper .CodeMirror-linenumber {
  color: white;
}

/* move the breakpoint below the other gutter elements */
.new-breakpoint .CodeMirror-gutter-elt:nth-child(2) {
  z-index: 0;
}

.editor-wrapper .CodeMirror-line {
  font-size: 11px;
  line-height: 14px;
}

.theme-dark .editor-wrapper .CodeMirror-line .cm-comment {
  color: var(--theme-content-color3);
}

.debug-line .CodeMirror-line {
  background-color: var(--breakpoint-active-color) !important;
}

/* Don't display the highlight color since the debug line
   is already highlighted */
.debug-line .CodeMirror-activeline-background {
  display: none;
}

.highlight-line .CodeMirror-line {
  animation: fade-highlight-out 1.5s normal forwards;
}

@keyframes fade-highlight-out {
  0% { background-color: var(--theme-highlight-gray); }
  100% { background-color: transparent; }
}

.theme-dark .highlight-line .CodeMirror-line {
  animation: fade-highlight-out-dark 1.5s normal forwards;
}

@keyframes fade-highlight-out-dark {
  0% { background-color: var(--theme-content-color3); }
  100% { background-color: transparent; }
}

.welcomebox {
  width: calc(100% - 1px);

  /* Offsetting it by 30px for the sources-header area */
  height: calc(100% - 30px);
  position: absolute;
  top: 30px;
  left: 0;
  padding: 50px 0;
  text-align: center;
  font-size: 1.25em;
  color: var(--theme-comment-alt);
  background-color: var(--theme-tab-toolbar-background);
  font-weight: lighter;
  z-index: 100;
  -moz-user-select: none;
  user-select: none;
}

